# bm1880-system-sdk

./: README.md
install/soc_bm1880_asic_edb/: bl2.bin_3.3V  bl31.bin_3.3V
linux-linaro-stable/: MAINTAINERS
linux-linaro-stable/drivers/: Kconfig  Makefile
linux-linaro-stable/kernel/: module.c  reboot.c  sysctl.c
linux-linaro-stable/mm/: cma.c  hugetlb.c  memblock.c  memcontrol.c  page-writeback.c  page_alloc.c
middleware/example/: CMakeLists.txt  ReadMe.txt  test_bmodel_face_detector.cpp  test_bmodel_face_ssh.cpp
middleware/include/: BmivaBmodel.hpp  BmivaDevice.hpp  BmivaFaceUtil.hpp  BmivaJson.hpp  BmivaMTCNN.hpp  BmivaMTCNN_Trans.hpp  BmivaRecognizer.hpp  BmivaTVM.hpp  BmivaTinySSH.hpp  BmivaTracker.hpp  Config.hpp  appcommon.h  base64.hpp  bmiva.hpp  bmiva_engine.hpp  bmiva_face.hpp  bmiva_internal.hpp  bmiva_ion.hpp  bmiva_type.hpp  bmiva_util.hpp  bmiva_util_opencv.hpp  bmtap2.h  config.h  face.hpp  generate_anchors.hpp  log_common.h  mtcnn_shape.hpp  mtcnn_shape_trans.hpp  proposal_layer_nocaffe.hpp  qnn.hpp  ssh_shape.hpp
middleware/lib/: libavcodec.so.58  libavdevice.so.58.2.100  libavdevice.so.58.5.100  libavfilter.so.7.12.100  libavfilter.so.7.40.101  libavformat.so.58.10.100  libavformat.so.58.20.100  libavutil.so.56.22.100  libavutil.so.56.8.100  libopencv_calib3d.so.3.4  libopencv_calib3d.so.3.4.0  libopencv_core.so.3.4.0  libopencv_features2d.so.3.4.0  libopencv_flann.so.3.4  libopencv_flann.so.3.4.0  libopencv_freetype.so.3.4  libopencv_imgcodecs.so.3.4.0  libopencv_imgproc.so.3.4.0  libopencv_ml.so.3.4.0  libopencv_objdetect.so.3.4  libopencv_objdetect.so.3.4.0  libopencv_photo.so.3.4  libopencv_photo.so.3.4.0  libopencv_shape.so.3.4.0  libopencv_stitching.so.3.4.0  libopencv_superres.so.3.4.0  libopencv_video.so.3.4  libopencv_video.so.3.4.0  libopencv_videoio.so.3.4.0  libopencv_videostab.so.3.4  libopencv_videostab.so.3.4.0  libpostproc.so.55.3.100  libqnn_antifacespoofing.so.1.0.0  libqnn_facepose.so.1  libqnn_mtcnn.so.1  libqnn_ssh.so.1  libswresample.so.3.0.101  libswresample.so.3.3.100  libswscale.so.5.0.102  libswscale.so.5.3.100
ramdisk/: README
ramdisk/prebuild/: README
ramdisk/scripts/: emmcboot_fixed_files.txt  multi.its  ramboot_fixed_files.txt  recovery_fixed_files.txt  sdboot_fixed_files.txt
ramdisk/tools/: busybox_install_m.sh  modify_sqsh_rootfs.sh  sort.py
u-boot/: Makefile
u-boot/cmd/: Kconfig  Makefile  bm_cdump.c  bm_ddr.c  bm_emmc_burn.c  bm_get_itb_size.c  bm_reboot.c  bm_sd_update.c  bm_update.c  bm_utask.c  fat.c  mem.c  mmc.c  mmcbcb.c
u-boot/common/: autoboot.c  board_f.c  env_fat.c  env_sf.c  main.c  usb_hub.c  usb_storage.c
u-boot/configs/: bitmain_bm1880_asic_edb_defconfig  bitmain_bm1880_asic_nne_defconfig  bitmain_bm1880_asic_nnm_defconfig
u-boot/drivers/: Makefile
u-boot/dts/: Makefile
u-boot/fs/: fs.c
u-boot/include/: bitmain-mcu.h  bm_cdump.h  bm_emmc_burn.h  bm_reboot.h  bm_utask.h  config_distro_bootcmd.h  env_default.h  mmc.h  sdhci.h
u-boot/lib/: Makefile  vsprintf.c
u-boot/scripts/: config_whitelist.txt
(+1097 files in other folders)
